<resources>
    <string name="app_name">PRASIKU</string>
    <string name="slogan">Let us find your catmate here and take it home</string>
    <string name="main_sign_up">Sign Up</string>
    <string name="main_sign_in">Sign In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_up">Register</string>
    <string name="intent_sign_in">Already registered. Login Here!</string>
    <string name="action_sign_in">Sign In</string>
    <string name="intent_reset_password">Forgot your password?</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_back"><![CDATA[<< Back]]></string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_change_password">Change Password</string>
    <string name="new_password">Your New Password</string>
    <string name="current_password">Your Current Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_submitted">Accepted</string>
    <string name="app_received">Received</string>
    <string name="about_us">About Us</string>
    <string name="tutorial">Tutorial</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="hint_username">Username</string>
    <string name="hint_cp">Phone Number</string>
    <string name="hint_full_name">Full Name (according to KTP)</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="user_registration_header">User Registration</string>
    <string name="hint_province">Province</string>
    <string name="hint_regency">Regency</string>
    <string name="hint_sub_district">Sub-district</string>
    <string name="hint_city">City</string>
    <string name="hint_address">Address</string>
    <string name="userPhotosText">Tap \nto choose \nYour photo</string>
    <string name="main_menu">Main Menu</string>
    <string name="cat_breeds_standards">Cat Breeds Standards</string>
    <string name="upload_cat_data">Upload Cat Data</string>
    <string name="find_cat_to_adopt">Find Cat to Adopt</string>
    <string name="applications">Applications</string>
    <string name="upload_cat_data_desc">Upload your cat data \nto find new owners</string>
    <string name="find_cat_for_adopt_desc">Find a cat to become your new family</string>
    <string name="cat_breeds_standards_desc">Find out information of cats breed</string>
    <string name="applications_desc">See your cat adoption application</string>
    <string name="upload_cat_data_header">Upload Cat Data</string>
    <string name="catPhotosText">Tap \nto select \nYour cat \nphoto</string>
    <string name="hint_cat_name">Cat"'"s Name</string>
    <string name="hint_catDesc">Description</string>
    <string name="hint_catMedicalNote">Medical Note</string>
    <string name="stat_vaccine">Vaccine Status</string>
    <string name="stat_spay_neuter">Spay/ Neuter Status</string>
    <string name="yes_vaccine_textview">Yes, Already Vaccinated</string>
    <string name="no_vaccine_textview">Not Yet</string>
    <string name="yes_spayneuter_textview">Yes, Already Spayed/ Neutered</string>
    <string name="no_spayneuter_textview">Not Yet</string>
    <string name="action_upload_cat">Upload</string>
    <string name="hint_catGender">Choose Cat"'"s Gender</string>
    <string name="hint_catReasonOpenAdoption">Select Reason for Open Adopt</string>
    <string name="hint_catDob">Cat"'"s Date of Birth</string>
    <string name="action_sign_up_next"><![CDATA[Next >>]]></string>
    <string name="iduser">clouwiko.dev.prasiku.activity.activity.iduser</string>
    <string name="user_cats_tab">Cats</string>
    <string name="user_profile_tab">Profile</string>
    <string name="userhomeprofile_citylabel">City</string>
    <string name="userhomeprofile_phonelabel">Phone</string>
    <string name="userhomeprofile_emaillabel">Email</string>
    <string name="hint_gender">Select Gender</string>
    <string name="hint_usertype">Type</string>
    <string name="userhomeprofile_addresslabel">Address</string>
    <string name="userhome_catname">Cat Name</string>
    <string name="userhome_catreason">Reason for Open Adopt</string>
    <string name="my_cat">My Cat</string>
    <string name="findcat_province">Select Province</string>
    <string name="findcat_city">Select City</string>
    <string name="catprofile_name">Cat Name</string>
    <string name="catprofile_gender">Cat Gender</string>
    <string name="catprofile_ownerlabel">Owner</string>
    <string name="catprofile_citylabel">City</string>
    <string name="catprofile_doblabel">Date of Birth</string>
    <string name="catprofile_descriptionlabel">About Me</string>
    <string name="catprofile_medicallabel">Medical Note</string>
    <string name="catprofile_vaccinelabel">Vaccine Status</string>
    <string name="catprofile_spayneuterlabel">Spayed/ Neutered Status</string>
    <string name="catprofile_adoptreasonlabel">Reasons for Open Adoption</string>
    <string name="adopted">ADOPTED</string>
    <string name="userhome_catgender">Gender</string>
    <string name="find_cat">Search Cat</string>
    <string name="catprofile_genderlabel">Gender</string>
    <string name="available">Adopt Me!</string>
    <string name="adoption_form">Adoption Form</string>
    <string name="hint_adoptionform_phone">Your phone number</string>
    <string name="hint_adoptionform_address">Your address</string>
    <string name="hint_adoptionform_job">Your job</string>
    <string name="hint_adoptionform_reasonwhy">Why You want to adopt?</string>
    <string name="hint_adoptionform_animal">Number of Animal(s) You have?</string>
    <string name="hint_housetype">Select Your house type</string>
    <string name="hint_adoptionform_housesize">Your house size (in m2)</string>
    <string name="hint_adoptionform_familynumber">Number of people in Your house</string>
    <string name="hint_adoptionform_animallive">where the cat will stay?</string>
    <string name="adoptionform_consideredthings">Before submitting the application, have You considered this conditions?</string>
    <string name="adoptionform_housememberpermission">House member permission</string>
    <string name="adoptionform_movingplan">Plan to move</string>
    <string name="adoptionform_aftermarriage">After marriage plan</string>
    <string name="adoptionform_kidsinhouse">Kids in Your house</string>
    <string name="adoptionform_financialplan">Your financial plan</string>
    <string name="adoptionform_submit">Submit</string>
    <string name="editcatavailable_textphoto">Tap \nto change \nYour cat \nphoto</string>
    <string name="editcatavailable_done_button">Done</string>
    <string name="hint_adoptionstatus">Adoption Status</string>
    <string name="editcatadopted_done_button">Change Adoption Status</string>
    <string name="catprofile_adoptstatuslabel">Adoption Status</string>
    <string name="adoptionform_yesvalue">Yes</string>
    <string name="adoptionform_novalue">No</string>
    <string name="nav_app_root">Applications</string>
    <string name="app_rejected">Rejected</string>
    <string name="nav_others_root">Others</string>
    <string name="my_app_list">My Application List</string>
    <string name="application_status">Status :</string>
    <string name="adoptionreview_adoption_form_label">Adoption Application for :</string>
    <string name="adoptionreview_applicant_phone_label">Phone Number</string>
    <string name="adoptionreview_applicant_job_label">Job</string>
    <string name="adoptionreview_applicant_address_label">Address</string>
    <string name="adoptionreview_applicant_reson_label">Reason for Adopt</string>
    <string name="adoptionreview_applicant_noa_label">Number of animal(s) I have</string>
    <string name="adoptionreview_applicant_housetype_label">My House Type</string>
    <string name="adoptionreview_applicant_housesize_label">My House Size</string>
    <string name="adoptionreview_applicant_nop_label">Number of people(s) in My house</string>
    <string name="adoptionreview_applicant_housemember_label">House member permission</string>
    <string name="adoptionreview_applicant_movingplan_label">Plan to move</string>
    <string name="adoptionreview_applicant_marriageplan_label">After marriage plan</string>
    <string name="adoptionreview_applicant_kids_label">Kids in My house</string>
    <string name="adoptionreview_applicant_financial_label">My financial plan</string>
    <string name="adoptionreview_applicant_catplace_label">Place for cat(s) to stay</string>
    <string name="adoptionreview_applicant_status_label">Application Status :</string>
    <string name="application_status_adopt_label">For Adopt :</string>
    <string name="application_status_stat_label">Status :</string>
    <string name="adoptionreview_contact_status_label">You can contact me on :</string>
    <string name="appacceptedreview_agreement">Adoption Agreement</string>
    <string name="edit_cat_data">Edit</string>
    <string name="delete_cat_data">Delete</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="edituserprofile_update">Update</string>
    <string name="verify_order">Check Your email to verify your account</string>
    <string name="verify_send_text">Send Verification</string>
    <string name="verify_email_text">Go to Your Email</string>
    <string name="verify_landing_button"><![CDATA[<< Back to Homepage]]></string>
    <string name="banned_information">Your account has been Banned. \nPlease contact Administrator for further information. \n(adm.sikucing@gmail.com)</string>
    <string name="hint_photo">Choose \nYour Photo</string>
    <string name="name_profile">Name</string>
    <string name="dob_profile">Date of Birth</string>
    <string name="gender_profile">Gender</string>
    <string name="province_profile">Province</string>
    <string name="city_profile">City</string>
    <string name="address_profile">Address</string>
    <string name="phone_profile">Phone</string>
    <string name="email_profile">Email</string>
    <string name="report">Report</string>
    <string name="your_name">Your name :</string>
    <string name="report_message">Report Message</string>
    <string name="send_report">Report this Person</string>
    <string name="owner">Owner</string>
    <string name="adopter">Adopter</string>
    <string name="noresult">No Results for Search</string>
    <string name="help_password">*Kata Sandi Bisa Beragam Karakter dan Minimal 6 Karakter</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="catGender">
        <item>Male</item>
        <item>Female</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="catReasonOpenAdoption">
        <item>Stray</item>
        <item>Abandoned</item>
        <item>Abused</item>
        <item>Owner Dead</item>
        <item>Owner Give Up</item>
        <item>House Moving</item>
        <item>Financial</item>
        <item>Medical Problem</item>
        <item>Others</item>
    </string-array>
</resources>